CORAL-0 fix QuickActions button spacing for specific case

--- a/coral-component-quickactions/src/styles/index.styl
+++ b/coral-component-quickactions/src/styles/index.styl
@@ -46,6 +46,7 @@ coral-quickactions-item {
   }
 }
 
-._coral-QuickActions-item-more._coral-ActionButton {
+._coral-QuickActions-item-more._coral-ActionButton,
+._coral-QuickActions ._coral-QuickActions-moreOverlay + ._coral-ActionButton {
   margin-left: 8px;
 }
